Edit - The z-index of Navigation links to make sure they will be always on top of everything

--- a/src/Website/Navigation/Navigation.scss
+++ b/src/Website/Navigation/Navigation.scss
@@ -25,6 +25,7 @@ $navigationHeight: 60px;
 {
     display: flex;
     background: white;
+    z-index: 10;
 }
 
 .navigation-link
